--- a/style/style.css
+++ b/style/style.css
@@ -10,6 +10,7 @@ body{
   flex-direction: column;
 }
 
+
 main{
   height: 100vh;
   display: flex;
@@ -18,15 +19,60 @@ main{
   flex-grow: 1;
 }
 
-header{
+aside{
   background-color: black;
   padding: 50px;
 }
 
+img{
+  max-width: 100%;
+}
 
-footer{
+/* ---------------------------------------------- */
+footer.toolbar{
   background-color: #282828;
+  height: 88px;
   display: flex;
   flex-direction: row;
-  padding: 50px;
+  align-items: center;
+  justify-content: space-between;
 }
+footer.toolbar > div {
+  border: 1px solid white;
+  padding: 0 5px;
+}
+
+.autore{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 10px;
+}
+
+.album{
+  width: 40px;
+  height: 40px;
+}
+
+.nome-album{
+  padding-right: 20px;
+}
+
+.nome-album h1{
+  color: white;
+  font-size: 15px;
+}
+
+.nome-album p{
+  color: #878787;
+  font-size: 10px;
+}
+
+.like{
+  color: #878787;
+}
+
+.like i:first-child{
+  margin-right: 10px;
+}
+
