--- a/style/style.css
+++ b/style/style.css
@@ -28,18 +28,27 @@ img{
   max-width: 100%;
 }
 
-/* ---------------------------------------------- */
+/* ----------------------------------------------
+                     toolbar
+   ---------------------------------------------- */
 footer.toolbar{
   background-color: #282828;
   height: 88px;
   display: flex;
-  flex-direction: row;
   align-items: center;
   justify-content: space-between;
+  overflow: hidden;
+
 }
 footer.toolbar > div {
-  border: 1px solid white;
+  /* border: 1px solid white; */
+  overflow: hidden;
   padding: 0 5px;
+}
+
+footer.toolbar > div:nth-child(2) {
+  width: 60%;
+  overflow: hidden;
 }
 
 .autore{
@@ -51,7 +60,6 @@ footer.toolbar > div {
 
 .album{
   width: 40px;
-  height: 40px;
 }
 
 .nome-album{
@@ -75,6 +83,7 @@ footer.toolbar > div {
 
 .like{
   color: #878787;
+
 }
 
 .like i:hover{
@@ -94,6 +103,7 @@ footer.toolbar > div {
 }
 
 .brano-icons{
+  overflow: hidden;
   /* border: 1px solid fuchsia; */
   display: flex;
   align-items: center;
@@ -111,7 +121,9 @@ footer.toolbar > div {
 
 .durata-brano{
   /* border:1px solid greenyellow; */
+  width: 100%;
   display: flex;
+  justify-content: center;
   align-items: center;
   gap: 35px;
 }
@@ -124,7 +136,7 @@ footer.toolbar > div {
 }
 
 .scorrimento-brano{
-  width: 150px;
+  width: 30%;
   height: 100%;
   border-radius: 15px;
   background-color: rgba(255, 255, 255, 0.6);
@@ -134,12 +146,33 @@ footer.toolbar > div {
   background-color: #86bc2b;
 }
 
-.durata-brano:hover .scorrimento-brano::after{
+.durata-brano:hover .scorrimento-brano::after,
+.volume:hover .scorrimento-brano::after{
   content: "";
-  padding: 0px 8px;
+  padding: 0 8px;
   background-color: white;
   border-radius: 50%;
   position: relative;
   left: 95%;
-  bottom: 100%;
+  bottom: 120%;
+}
+
+.volume{
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  gap: 20px;
+  height: 30px;
+}
+
+.volume i{
+  color: white;
+}
+
+.volume .barra-brano{
+  width: 100px;
+}
+
+.volume .scorrimento-brano{
+  width: 30%;
 }
