--- a/style/style.css
+++ b/style/style.css
@@ -33,11 +33,71 @@ img{
 aside.navbar{
   background-color: black;
   width: 250px;
-  padding: 0 10px;
+  padding: 0 15px;
+  overflow: auto;
 }
 
 .logo-spotify{
   width: 70%;
+  margin: 20px 0;
+}
+nav{
+  margin-bottom: 25px;
+}
+
+nav ul{
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+}
+
+nav li{
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+nav li:hover, nav li.active{
+  font-weight: bold;
+  color: white;
+}
+
+.logo-icon{
+  width: 25px;
+}
+
+.playlist{
+  overflow-y: visible;
+}
+
+.playlist h2{
+  color: white;
+  font-size: 15px;
+  text-transform: uppercase;
+}
+
+.playlist ul{
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+}
+
+.logo-playlist  li{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 10px;
+}
+
+.logo-playlist{
+  width: 10px;
+  font-weight: bold;
+  color: black;
+  background-color: #838383;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 30px;
 }
 
 /* *----------------------------------------------
@@ -47,18 +107,14 @@ aside.navbar{
   background-color: rgba(0, 0, 0, 0.3);
   width: 100%;
   height: 88px;
+  padding: 0 10px;
   display: flex;
   justify-content: flex-end;
   align-items: center;
-}
-
-.upgrade{
-  padding: 0 10px;
-  position: fixed;
   z-index: 1;
 }
 
-.upgrade section{
+.upgrade{
   color: white;
   border:1px solid white ;
   border-radius: 30px;
@@ -66,6 +122,8 @@ aside.navbar{
   text-transform: uppercase;
   font-weight: bold;
 }
+
+
 
 /* *----------------------------------------------
                     !toolbar
