--- a/style/style.css
+++ b/style/style.css
@@ -8,6 +8,9 @@ body{
   height: 100vh;
   display: flex;
   flex-direction: column;
+
+  /* font */
+  font-family: 'Roboto', sans-serif;
 }
 
 
@@ -36,12 +39,13 @@ img{
    *---------------------------------------------- */
 aside.navbar{
   background-color: black;
-  width: 250px;
   padding: 0 15px;
   height: 100vh;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  flex-basis: 230px;
+  flex-shrink: 0;
   overflow-y: auto;
 }
 
@@ -149,13 +153,14 @@ nav li.active,
               !servizio a pagamento
    *---------------------------------------------- */
 .container-upgrade{
-  background-color: rgba(0, 0, 0, 0.3);
-  width: 100%;
-  height: 88px;
-  padding: 20px;
-  position: absolute;
+  position: fixed;
   top: 0;
-  z-index: 1;
+  right: 0;
+  left: 230px;
+  z-index: 2;
+  background-color: rgba(0, 0, 0, 0.3);
+  height: 88px;
+  padding: 30px;
   display: flex;
   justify-content: flex-end;
   align-items: center;
@@ -186,6 +191,7 @@ nav li.active,
   .menu {
     display: flex;
     justify-content: center;
+    margin-bottom: 40px;
   }
 
   .menu ul{
@@ -202,6 +208,11 @@ nav li.active,
     justify-content: center;
     align-items: center;
   }
+
+  .menu li:hover, .menu li.active{
+    color: white;
+  }
+
   .menu li::after{
     content: "";
     height: 0;
@@ -211,11 +222,73 @@ nav li.active,
 
   .menu li:hover::after, .menu li.active::after{
     content: "";
-    background-color: #adff2f;
+    background-color: #1db954;
     border-radius: 15px;
     height: 3px;
     width: 30px;
     margin-top: 5px;
+  }
+
+  .container-album{
+    padding: 0 20px;
+  }
+
+  .container-album h1{
+    color: white;
+    font-size: 40px;
+  }
+
+  .container-album ul{
+    display: flex;
+    flex-flow: row wrap;
+    gap: 15px;
+    margin: 40px 0 100px 0;
+  }
+
+  .container-album li{
+    width: calc((100% / 6) - 15px);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 15px;
+    position: relative;
+  }
+
+  .img-album{
+    width: 100%;
+    position: relative;
+  }
+
+  .hover{
+    display: none;
+  }
+
+  .img-album:hover .hover{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(0, 0, 0, 0.5);
+    color: white;
+    font-size: 100px
+  }
+
+  .container-album h3{
+    color: white;
+    font-size: 20px;
+  }
+
+  .container-album > p{
+    color: #a3a3a3;
+    font-size: 21px;
+    margin-top: 10px;
+  }
+
+  .radius{
+    border-radius: 50%;
+    overflow: hidden;
   }
 
 /* *----------------------------------------------
@@ -230,6 +303,7 @@ footer.toolbar{
   position: fixed;
   bottom: 0;
   width: 100%;
+  z-index: 1;
 }
 
 footer.toolbar > div {
@@ -239,7 +313,6 @@ footer.toolbar > div {
 
 footer.toolbar > div:nth-child(2) {
   width: 60%;
-  overflow: hidden;
 }
 
 .autore{
@@ -338,21 +411,23 @@ footer.toolbar > div:nth-child(2) {
   height: 100%;
   border-radius: 15px;
   background-color: rgba(255, 255, 255, 0.6);
+  position: relative;
 }
 
-.durata-brano:hover .scorrimento-brano{
-  background-color: #86bc2b;
+.durata-brano:hover .scorrimento-brano,
+.volume:hover .scorrimento-brano{
+  background-color: #1db954;
 }
 
-.durata-brano:hover .scorrimento-brano::after,
-.volume:hover .scorrimento-brano::after{
-  content: "";
-  padding: 0 8px;
+.durata-brano:hover .scorrimento,
+.volume:hover .scorrimento{
+  width: 13px;
+  height: 13px;
   background-color: white;
   border-radius: 50%;
-  position: relative;
-  left: 95%;
-  bottom: 120%;
+  position: absolute;
+  top: -4px;
+  right: -5px;
 }
 
 .volume{
